# DishList

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Dockerfile  Justfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: auto-tag.yml  version-check.yml
app/: __init__.py  cli.py  config.py  main.py  metrics.py  models.py  storage.py
app/static/: styles.css  tag-picker.js
app/templates/: add.html  admin.html  admin_edit_dish.html  admin_tags.html  base.html  create_event.html  home.html  landing.html  manage.html  manage_edit_dish.html
app/templates/partials/: card_grid.html  table_rows.html  tag_picker.html
data/: config.json
docs/: _template.html  build.py  ci-cd.md  index.html  index.md
docs/adr/: 0001-warning-based-tagging-rule.md  0002-ip-gated-web-admin.md  0003-sqlite-as-primary-datastore.md  0004-no-user-accounts.md  0005-dual-write-config-migration-shim.md  0006-ssr-htmx-vanilla-js-frontend.md
tests/: conftest.py  test_config.py  test_routes.py  test_storage_events.py  test_storage_tags.py
