[project]
name = "dishlist"
version = "0.5.0a5"
description = "Self-hosted potluck planner"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn",
    "jinja2",
    "python-multipart",
    "pydantic>=2.10,<3",
    "starlette<1.0",
    "click>=8.3.3",
]

[project.scripts]
dishlist = "app.cli:cli"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["app*"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["app/cli.py"]
